# OpenCV-yolov5

./: CMakeLists.txt  README.md  main  main.cpp  yolo.cpp  yolo.h
backup/: CMakeLists.txt  yolo.cpp
